# cmake_learn

01first/: CMakeLists.txt  test.cpp
